--- a/index.html
+++ b/index.html
@@ -4,8 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web developer portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h1 class="nav-title">Man<span class="text-primary">j</span>ur</h1>
+            <ul>
+              <li><a class="dark-2" href="">Portfolio</a></li>
+
+              <li><a class="dark-2" href="">Blogs</a></li>
+
+              <li><a class="dark-2" href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greeting dark-2">Hi, I am</h4>
+                <h1 class="banner-title">Manjur Alam</h1>
+                <p class="banner-description">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+                
+            </div>
+            <img class="banner-photo" src="images/hardy.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="about">
+<h3 class="section-title">About Me</h3>
+<p class="section-description">I'm a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our mate.</p>
+
+<!-- .about-item*4>p.item-title+p.item-description -->
+
+ <div class="about-items">
+    <div class="about-item">
+    <p class="item-title">Name:</p>
+
+    <p class="item-description">Mohammad Manjur Alam</p>
+ </div>
+ <div class="about-item">
+    <p class="item-title">Email:</p>
+    <p class="item-description">mohammadmanjuralam10@gmail.com</p>
+ </div>
+ <div class="about-item">
+    <p class="item-title">Date of birth:</p>
+    <p class="item-description">12 July 2002</p>
+ </div>
+ <div class="about-item">
+    <p class="item-title">From:</p>
+    <p class="item-description">Chittagong, Bangladesh</p>
+ </div>
+ </div>
+
+        </section>
+    </main>
+
+<!-- what i do section -->
+
+    <main>
+        <section class="skills">
+<h3 class="section-title text-center">What I do</h3>
+<p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+     <!-- skills-item -->
+      <div class="skills-container">
+<div class="skill">
+    <img src="images/icons/js.png" alt="">
+    <h4 class="skill-title">Vanilla JavaScript</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.</p>
+</div>
+<div class="skill">
+    <img src="images/icons/react.png" alt="">
+    <h4 class="skill-title">React</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+</div>
+<div class="skill">
+    <img src="images/icons/nodejs.png" alt="">
+    <h4 class="skill-title">Node.js</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+</div>
+<div class="skill">
+    <img src="images/icons/mongo.png" alt="">
+    <h4 class="skill-title">MongoDB</h4>
+    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+</div>
+</div>
+        </section>
+    </main>
 </body>
 </html>
